tests/NormalTests/paczka1/small_fuzzy/16086018.err
Error in line 3: 0HYmyMR S599 11,6
Error in line 4: 0HYmyMR A537 60,1
Error in line 8: 0HYmyMR S524 8,6
Error in line 14: UZoIYG A537 -1,5
